--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
+    "isomorphic-dompurify": "^2.26.0",
     "marked": "^16.2.0",
     "next": "15.5.0",
     "next-themes": "^0.4.6",
